# mervbot-plugin-template

./: .gitmodules  CMakeLists.txt  README.md
cfg/: Spawns.txt  Spawns_Linux.txt  Spawns_Windows.txt
include/: pluginmeta.h  spawn.h
src/: command.cpp  pluginmeta.cpp.in  spawn.cpp
